# GPU-programming

./: .gitignore  README.md
GPU_1/Filters/: Desaturate_CL.cpp  Desaturate_CL.h  Desaturate_CPU.cpp  Desaturate_CPU.h  Greenscreen_CL.cpp  Greenscreen_CL.h  Greenscreen_CPU.cpp  Greenscreen_CPU.h  HueShift_CL.cpp  HueShift_CL.h  HueShift_CPU.cpp  HueShift_CPU.h  Invert_CL.cpp  Invert_CL.h  Invert_CPU.cpp  Invert_CPU.h  NoiseCL.cpp  NoiseCL.h
GPU_2/filters/: Blur_CL.cpp  Blur_CL.h  Blur_CPU.cpp  Blur_CPU.h  Blur_Local_CL.cpp  Blur_Local_CL.h  Median_CL.cpp  Median_CL.h  Median_CPU.cpp  Median_CPU.h  Sharpen_CL.cpp  Sharpen_CL.h  Sharpen_CPU.cpp  Sharpen_CPU.h  Sobel_CPU.cpp  Sobel_CPU.h  Sobel_GPU.cpp  Sobel_GPU.h
GPU_3/filters/: Histogram_CL.cpp  Histogram_CL.h  Histogram_CPU.cpp  Histogram_CPU.h
Lab1/C1_A1/: HelloWorld_expand.cpp  ScopeAndStorageLin_expand.cpp  ScopeAndStorageWin_expand.cpp
Lab1/C1_A2/: CMakeLists.txt  Decipher.cpp
Lab2/C2_A1/: BootstrapVerify.cpp  CMakeLists.txt  Check.cpp  Check.h  Name.cpp  Name.h  README.md  Verify.cpp  Verify.h  ZipInfo.cpp  ZipInfo.h
Lab2/C2_A2/: CMakeLists.txt  gameOfLife.cpp
Lab3/C3_A1/: CMakeLists.txt  Calendar.cpp
Lab4/C4_A1/: CMakeLists.txt  ComputerSystem.cpp  ComputerSystem.h  DeviceState.cpp  DeviceState.h  GraphicsCard.cpp  GraphicsCard.h  HardDrive.cpp  HardDrive.h  HardwareDescriptor.cpp  HardwareDescriptor.h  LinkedListElement.cpp  LinkedListElement.h  MemoryDevice.cpp  MemoryDevice.h  RAMModule.cpp  (+2 more)
Lab5/C5_A1/: CMakeLists.txt  LFO.h  StringFIFO.cpp  StringFIFO.h  StringLIFO.cpp  StringLIFO.h  test.cpp
(+7 files in other folders)
